Bug 13311 - Typo in warning message for missing PAC
Summary: Typo in warning message for missing PAC
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: unspecified
Hardware: All All
: P5 trivial (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-27 20:07 UTC by Matt Selsky
Modified: 2020-11-25 01:29 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Selsky 2018-02-27 20:07:46 UTC
https://github.com/samba-team/samba/blob/master/auth/kerberos/gssapi_pac.c#L168

"obtaining PAC via GSSAPI gss_inqiure_sec_context_by_oid (Heimdal OID) failed: %s\n" should be "obtaining PAC via GSSAPI gss_inquire_sec_context_by_oid (Heimdal OID) failed: %s\n"
Comment 1 Matt Selsky 2018-02-27 20:08:11 UTC
Should I submit a PR via Github or attach it here?
Comment 2 Matt Selsky 2018-03-26 06:03:43 UTC
Fix was committed to master:
https://github.com/samba-team/samba/commit/7ab4ceffb48e8f82057eea9b2eb2eb09d8bc5ddc